# git-commenter

./: .travis.yml  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md
git_commenter/: cli.py  data.py  git.py  question.py
git_commenter/data/: data.json
tests/: test_cli.py  test_data.py  test_git_commenter.py  test_question.py
